--- a/SwapStff/bin/SwapStff.dll.config
+++ b/SwapStff/bin/SwapStff.dll.config
@@ -16,9 +16,10 @@
     </providers>-->
   </entityFramework>
   <connectionStrings>
-    <add name="DataContext" connectionString="Data Source=116.193.163.156;Initial Catalog=SWAPSTFF_New;Persist Security Info=True;User ID=sa;pwd=!nd!@123" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="Data Source=116.193.163.156;Initial Catalog=SWAPSTFF_FinalTesting;Persist Security Info=True;User ID=sa;pwd=!nd!@123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="vs:EnableBrowserLink" value="false" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -91,7 +92,7 @@
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
       <bufferSize value="1" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString value="server=Data Source=116.193.163.156;Initial Catalog=SWAPSTFF_New;Persist Security Info=True;User ID=sa;pwd=!nd!@123" />
+      <connectionString value="server=Data Source=116.193.163.156;Initial Catalog=SWAPSTFF_FinalTesting;Persist Security Info=True;User ID=sa;pwd=!nd!@123" />
       <commandText value="INSERT INTO Log4Net_Error ([Date],[Thread],[UserName],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread,@username, @log_level, @logger, @message, @exception)" />
       <parameter>
         <parameterName value="@log_date" />
